--- a/client/views/attendeesDialog.tpl.html
+++ b/client/views/attendeesDialog.tpl.html
@@ -15,7 +15,7 @@
           <form role="form">
             <div class="form-group">
               <label for="exampleInputEmail1">Full name</label>
-              <input type="text" class="form-control" id="attendeeName" placeholder="e.g. Monica Jonhson" required>
+              <input type="text" class="form-control" id="attendeeName" placeholder="e.g. Monica Johnson" required>
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Email</label>
