--- a/client/views/inviteLanding.tpl.html
+++ b/client/views/inviteLanding.tpl.html
@@ -77,7 +77,7 @@
 		<form class="well form-search">
 		    <div class="row">
 		      <div class="col-md-5">
-		        <input type="text" id="name" class="form-control" placeholder="Full name (e.g. Monica Jonhson)">
+		        <input type="text" id="name" class="form-control" placeholder="Full name (e.g. Monica Johnson)">
 		      </div>
 		      <div class="col-md-5">
 		        <input type="text" id="email" class="form-control" placeholder="Email address (e.g. monica@email.com)">
